--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,21 @@
 sonar.projectKey=Practice-10
+sonar.projectName=Practice-10
+sonar.projectVersion=1.0
+
+# Source code location
+sonar.sources=src
+sonar.tests=src
+
+# Encoding of the source code
+sonar.sourceEncoding=UTF-8
+
+# Node.js specific settings
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=**/*.test.js,**/*.spec.js,**/__tests__/**
+
+# Exclude node_modules and other unnecessary files
+sonar.exclusions=node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js
+
+# Additional settings
+sonar.host.url=${SONAR_HOST_URL}
+sonar.login=${SONAR_TOKEN}
