--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,27 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      action:
-        description: 'Action to perform'
-        required: true
-        default: 'build'
-        type: choice
-        options:
-          - build
-          - test
-          - lint
-          - sonar
-      branch:
-        description: 'Branch to run the workflow on'
-        required: true
-        default: 'main'
-        type: choice
-        options:
-          - main
-          - develop
-          - feature/*
-          - bugfix/*
 
 jobs:
   build:
@@ -35,41 +14,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-          ref: ${{ github.event.inputs.branch || github.ref }}
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        if: ${{ github.event.inputs.action == 'build' || github.event.inputs.action == 'test' || github.event.inputs.action == 'lint' || github.event.inputs.action == 'sonar' }}
-        run: npm ci
-      
-      - name: Run tests
-        if: ${{ github.event.inputs.action == 'test' || github.event.inputs.action == 'sonar' }}
-        run: npm test
-      
-      - name: Run linting
-        if: ${{ github.event.inputs.action == 'lint' }}
-        run: npm run lint
-      
-      - name: SonarQube Scan
-        if: ${{ github.event.inputs.action == 'sonar' }}
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_PROJECT_KEY: Practice-10
-          SONAR_PROJECT_NAME: Practice-10
-          SONAR_PROJECT_VERSION: 1.0
-          SONAR_LOGIN: ${{ secrets.SONAR_TOKEN }}
-      
-      - name: SonarQube Quality Gate
-        if: ${{ github.event.inputs.action == 'sonar' }}
-        uses: sonarsource/sonarqube-quality-gate-action@master
-        timeout-minutes: 5
+      - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
