--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,17 +4,18 @@ sonar.projectVersion=1.0
 
 # Source code location
 sonar.sources=src
-sonar.tests=src
+sonar.tests=src/test
+sonar.test.inclusions=src/test/**/*
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
 
 # Node.js specific settings
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.js,**/*.spec.js,**/__tests__/**
+sonar.coverage.exclusions=src/test/**,**/__tests__/**
 
 # Exclude node_modules and other unnecessary files
-sonar.exclusions=node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js
+sonar.exclusions=node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js,src/test/**
 
 # Additional settings
 sonar.host.url=${SONAR_HOST_URL}
