Try to run tests to display correct coverage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db-migration": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
-    "test": "jest --coverage",
+    "test": "jest --coverage --coverageReporters=lcov --coverageReporters=text --coverageReporters=text-summary",
     "docker:start": "npm run db-migration && cross-env NODE_ENV=production node src/index.js"
   },
   "repository": {
