Add configs for test coverage and smell

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,6 +17,20 @@ sonar.coverage.exclusions=src/test/**,**/__tests__/**
 # Exclude node_modules and other unnecessary files
 sonar.exclusions=node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js,src/test/**
 
+# Code smell detection settings
+sonar.javascript.file.suffixes=js
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.duplicated.lines.density.minimum=3
+sonar.javascript.complexity.function.threshold=15
+sonar.javascript.complexity.class.threshold=50
+sonar.javascript.complexity.file.threshold=100
+sonar.javascript.maxstatements.function=50
+sonar.javascript.maxstatements.file=200
+sonar.javascript.maxparameters.function=5
+sonar.javascript.maxnesting.function=4
+sonar.javascript.maxlines.function=50
+sonar.javascript.maxlines.file=500
+
 # Additional settings
 sonar.host.url=${SONAR_HOST_URL}
 sonar.login=${SONAR_TOKEN}
