--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run tests with coverage
+        run: npm test
+        
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -28,3 +40,14 @@ jobs:
           SONAR_COVERAGE_EXCLUSIONS: "src/test/**,**/__tests__/**"
           SONAR_EXCLUSIONS: "node_modules/**,**/node_modules/**,**/*.min.js,**/*.bundle.js,src/test/**"
           SONAR_SOURCE_ENCODING: UTF-8
+          # Code smell detection settings
+          SONAR_JAVASCRIPT_DUPLICATED_LINES_DENSITY_MINIMUM: 3
+          SONAR_JAVASCRIPT_COMPLEXITY_FUNCTION_THRESHOLD: 15
+          SONAR_JAVASCRIPT_COMPLEXITY_CLASS_THRESHOLD: 50
+          SONAR_JAVASCRIPT_COMPLEXITY_FILE_THRESHOLD: 100
+          SONAR_JAVASCRIPT_MAXSTATEMENTS_FUNCTION: 50
+          SONAR_JAVASCRIPT_MAXSTATEMENTS_FILE: 200
+          SONAR_JAVASCRIPT_MAXPARAMETERS_FUNCTION: 5
+          SONAR_JAVASCRIPT_MAXNESTING_FUNCTION: 4
+          SONAR_JAVASCRIPT_MAXLINES_FUNCTION: 50
+          SONAR_JAVASCRIPT_MAXLINES_FILE: 500
