--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "eventsexpress_node_js",
   "description": "EventsExpress project Node.js part",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "main": "src/index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node src/index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "db-migration": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js",
+    "lint": "eslint . --ext .js --max-warnings 0",
+    "lint:fix": "eslint . --ext .js --fix",
     "test": "jest --coverage --coverageReporters=lcov --coverageReporters=text --coverageReporters=text-summary",
     "docker:start": "npm run db-migration && cross-env NODE_ENV=production node src/index.js"
   },
@@ -37,14 +37,14 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "5.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^27.5.1",
     "nodemon": "2.0.15",
+    "prettier": "^3.2.5",
     "sequelize-cli": "^6.4.1"
   }
 }
