--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "EventsExpress project Node.js part",
   "version": "1.2.0",
   "main": "src/index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node src/index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
