--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -31,6 +31,14 @@ sonar.javascript.maxnesting.function=4
 sonar.javascript.maxlines.function=50
 sonar.javascript.maxlines.file=500
 
+# ESLint integration
+sonar.eslint.reportPaths=eslint-report.json
+sonar.javascript.eslint.reportPaths=eslint-report.json
+
+# Quality Profile settings
+sonar.qualitygate.wait=true
+sonar.qualitygate.conditions=coverage,duplicated_lines_density,code_smells
+
 # Additional settings
 sonar.host.url=${SONAR_HOST_URL}
 sonar.login=${SONAR_TOKEN}
